chore(Hero): fix gap

--- a/src/assets/scss/_tailwind.scss
+++ b/src/assets/scss/_tailwind.scss
@@ -23,9 +23,9 @@
     @apply text-16 font-ss3-regular;
   }
 
-  .section-gap {
-    @apply py-64 xl:py-128;
-  }
+  // .section-gap {
+  //   @apply py-64 xl:py-128;
+  // }
   .section-inner-gap {
     @apply flex flex-col gap-64;
   }
